<resources>
    <string name="app_name">Patient Info Bank</string>
    <string name="app_description">Keep your prescriptions\nsafe and secure forever</string>


    <string name="signInWarn">Safe sign in with your Google account.\nAnd keep your prescription safe and secure forever.</string>
    <string name="signIn">Sign in</string>
    <string name="signOut">Sign Out</string>

    <string name="patientIdTitle">Your Patient Id</string>

    <string name="noDonorFound">No donor is found</string>
    <string name="ccTitle">C/C:</string>
    <string name="oeTitle">O/E:</string>
    <string name="adviceTitle">Advice:</string>
    <string name="cc">C/C</string>
    <string name="oe">O/E</string>
    <string name="oeValue">O/E value</string>
    <string name="advice">Advice</string>
    <string name="medicine">Medicine</string>
    <string name="medicineType">Type</string>
    <string name="nameTitle">Name:</string>
    <string name="ageTitle">Age:</string>
    <string name="dateTitle">Date:</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="period">Period</string>
    <string name="comment">Comment</string>
    <string name="beforeMeal">Before meal</string>
    <string name="afterMeal">After meal</string>
    <string name="medicineBeforeTaken">The Medicines have taken::</string>
    <string name="patientIdNotFound">Invalid patient id</string>
    <string name="prescriptionList">Your prescriptions::</string>
    <string name="visitedDoctors">Visited doctors list::</string>
    <string name="prescribedOn">Prescribed on</string>
    <string name="by">by</string>
    <string name="prescribedBy">Dr. </string>
    <string name="dateError">Date error</string>
    <string name="emptyList">Empty list</string>

    <!--    hints-->
    <string name="userCategoryHint">User category</string>
    <string name="phoneNumberHint">Phone number</string>
    <string name="patientBirthDateHint">Patient birth date</string>
    <string name="doctorDegreeHint">Doctor degree</string>
    <string name="degreesListHint">Degrees list</string>
    <string name="nameHint">Name</string>
    <string name="searchHint">Search by patient id</string>
    <string name="fullNameHint">Full name</string>
    <string name="bloodGroupHint">Blood group</string>
    <string name="birthDateHint">Birth date</string>
    <string name="emailHint">Email</string>
    <string name="addressHint">Address</string>
    <string name="divisionHint">Division</string>
    <string name="districtHint">District</string>
    <string name="divisionTitle">Division:</string>
    <string name="districtTitle">District:</string>
    <string name="startTitle">Start:</string>
    <string name="endTitle">End:</string>
    <string name="interval">Interval</string>
    <string name="intervalTitle">Interval:</string>
    <string name="day">Day </string>
    <string name="set">Set</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="setReminder">Set reminder</string>

    <string name="beADonor">Be A Donor</string>
    <string name="findADonor">Find A Donor</string>

    <!--    Menu titles-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="blood">Blood</string>
    <string name="notifications">Notifications</string>
    <string name="reminders">Reminders</string>
    <string name="changeProfilePicture">Change picture</string>
    <string name="changeName">Change name</string>
    <string name="changeContact">Change contact</string>
    <string name="addDegree">Add degree</string>
    <string name="done">Done</string>
    <string name="refresh">Refresh</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profileEmailTitle">Email:</string>
    <string name="profileContactTitle">Contact:</string>
    <string name="profileDegreesTitle">Degrees:</string>

    <!--    animation transition name-->
    <string name="searchBarTransition">search_bar_transition</string>
    <string name="logoTransition">logo_transition</string>
    <string name="donorNameTransition">donor_name_transition</string>
    <string name="donorDivisionTransition">donor_division_transition</string>
    <string name="donorDistrictTransition">donor_district_transition</string>
    <string name="donorBloodGroupTransition">donor_blood_group_transition</string>
    <string name="donorBloodGroupIconTransition">donor_blood_group_icon_transition</string>
    <string name="notificationTitleTransition">notification_title_transition</string>
    <string name="notificationMessageTransition">notification_message_transition</string>
    <string name="notificationImageTransition">notification_image_transition</string>


    <!--    NotificationUtils Channel Id-->
    <string name="default_notification_channel_id">Patient Info Bank</string>
</resources>
