<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/patientHomeColor"
        android:enabled="true"
        android:iconTintMode="src_in"
        app:cnb_textColor="@color/patientHomeColor"
        android:checked="true"
        />
    <item
        android:id="@+id/reminders"
        android:icon="@drawable/ic_reminder"
        android:title="@string/reminders"
        app:cnb_iconColor="@color/patientRemindersColor"
        android:enabled="true"
        android:iconTintMode="src_in"
        app:cnb_textColor="@color/patientBloodColor"
        />
    <item
        android:id="@+id/blood"
        android:icon="@drawable/ic_blood"
        android:title="@string/blood"
        app:cnb_iconColor="@color/patientBloodColor"
        android:enabled="true"
        android:iconTintMode="src_in"
        app:cnb_textColor="@color/patientBloodColor"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/patientProfileColor"
        android:enabled="true"
        android:iconTintMode="src_in"
        app:cnb_textColor="@color/patientProfileColor"
        />
</menu>