<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.Patient.Notification.NotificationView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/overFlowMenuTheme"
            app:popupTheme="@style/popupStyle"
            />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:src="@drawable/ic_launcher"
                    android:transitionName="@string/notificationImageTransition"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16sdp"
                    android:padding="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/mtcorsva"
                    android:textColor="@color/patientHomeColor"
                    android:text="@string/app_name"
                    android:transitionName="@string/notificationTitleTransition"
                    />
                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    android:fontFamily="@font/mtcorsva"
                    android:textColor="@color/white"
                    android:text="@string/app_name"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:transitionName="@string/notificationMessageTransition"
                    />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</layout>